[gd_scene load_steps=20 format=3 uid="uid://unfxg1qlrd84"]

[ext_resource type="Script" uid="uid://0e88no365uj6" path="res://scripts/world/world.gd" id="1_q5uyg"]
[ext_resource type="Script" uid="uid://bknnd4kfmq2d5" path="res://scripts/world/game_over.gd" id="2_r0a0i"]
[ext_resource type="PackedScene" uid="uid://5qiutcfa6bb8" path="res://scenes/player/player.tscn" id="3_hvnw1"]
[ext_resource type="PackedScene" uid="uid://bnsbq016sfu1d" path="res://scenes/player/camera_rig.tscn" id="4_lo3jn"]
[ext_resource type="PackedScene" uid="uid://dmwo4fku7gxfi" path="res://scenes/enemies/spider.tscn" id="5_04th8"]
[ext_resource type="Material" uid="uid://bsnyh13bc7t6a" path="res://assets/textures/new_chao.tres" id="6_hvnw1"]
[ext_resource type="Material" uid="uid://cwjli7ix2o4yc" path="res://materials/wall_material.tres" id="7_hixyl"]
[ext_resource type="Material" uid="uid://5i2i4naclale" path="res://assets/textures/new_parede.tres" id="7_lo3jn"]
[ext_resource type="Script" uid="uid://db8gnroasgryu" path="res://scripts/world/auto_hider.gd" id="8_086et"]
[ext_resource type="Script" uid="uid://c6yxo4c3q7dwc" path="res://scripts/world/hud.gd" id="9_i86qd"]
[ext_resource type="PackedScene" uid="uid://b2xaubntr87w6" path="res://assets/models/porta.glb" id="10_hvnw1"]

[sub_resource type="PackedScene" id="PackedScene_4mrxx"]
_bundled = {
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("GameOver", "process_mode", "script", "Node3D"),
"node_count": 1,
"node_paths": [],
"nodes": PackedInt32Array(-1, -1, 3, 0, -1, 2, 1, 0, 2, 1, 0),
"variants": [3, ExtResource("2_r0a0i")],
"version": 3
}

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_jyhfs"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_tbgi4"]
sky_material = SubResource("ProceduralSkyMaterial_jyhfs")

[sub_resource type="Environment" id="Environment_tefeu"]
background_mode = 2
sky = SubResource("Sky_tbgi4")
tonemap_mode = 2
glow_enabled = true
glow_levels/1 = 1.0
glow_levels/2 = 1.0
glow_intensity = 1.0
glow_bloom = 0.1

[sub_resource type="NavigationMesh" id="NavigationMesh_tefeu"]
vertices = PackedVector3Array(9.999224, 4, -9.25, 10.249224, 4, 5.5, 10.499224, 4, -9, 1.4992237, 4, 1.75, -2.2507763, 4, 1.75, 1.2492237, 4, 2.25, -5.5007763, 4, -9.25, -5.2507763, 4, -1.75, -4.7507763, 4, -9.25, 1.7492237, 4, 9.25, 0.9992237, 4, 9.25, 19.249224, 4, -9, 18.999224, 4, 9.25, 19.499224, 4, 9.5, 19.499224, 4, -9.5, -19.500776, 4, -9.5, -19.500776, 4, -9, -19.500776, 4, 9, -19.500776, 4, 9.5, -5.0007763, 1, 0.75, -5.0007763, 1, -0.75, -6.2507763, 1, -1, -18.250776, 1, 0.75, -6.2507763, 1, -8.25, -18.250776, 1, -8.25, -4.2507763, 1, 0.75, -4.0007763, 1, 1.75, -3.2507763, 1, 1.75, -3.0007763, 1, 0.75, 2.2492237, 1, 0.75, 2.4992237, 1, 2.5, 9.249224, 1, 2.25, -4.0007763, 1, -1, -4.0007763, 1, -8.25, 9.249224, 1, -8.25, 11.499224, 1, 6.25, 10.499224, 1, 6.5, 10.499224, 1, 8.25, 18.249224, 1, 8.25, 18.249224, 1, -8.25, 11.499224, 1, -8.25, -4.2507763, 1, 3, -3.0007763, 1, 3, -18.250776, 1, 3, -18.250776, 1, 8.25, 0.24922371, 1, 8.25, 0.24922371, 1, 3, 9.249224, 1, 6.25, 2.4992237, 1, 8.25)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(5, 4, 3), PackedInt32Array(8, 7, 6), PackedInt32Array(10, 5, 9), PackedInt32Array(9, 5, 3), PackedInt32Array(12, 11, 13), PackedInt32Array(13, 11, 14), PackedInt32Array(11, 2, 14), PackedInt32Array(14, 2, 0), PackedInt32Array(6, 16, 15), PackedInt32Array(8, 6, 15), PackedInt32Array(17, 10, 18), PackedInt32Array(18, 10, 13), PackedInt32Array(0, 8, 14), PackedInt32Array(14, 8, 15), PackedInt32Array(13, 10, 9), PackedInt32Array(13, 9, 12), PackedInt32Array(20, 19, 21), PackedInt32Array(21, 19, 22), PackedInt32Array(23, 21, 24), PackedInt32Array(24, 21, 22), PackedInt32Array(26, 25, 27), PackedInt32Array(27, 25, 28), PackedInt32Array(31, 30, 29), PackedInt32Array(25, 19, 20), PackedInt32Array(20, 32, 25), PackedInt32Array(25, 32, 28), PackedInt32Array(32, 33, 29), PackedInt32Array(29, 33, 31), PackedInt32Array(31, 33, 34), PackedInt32Array(29, 28, 32), PackedInt32Array(36, 35, 37), PackedInt32Array(37, 35, 38), PackedInt32Array(40, 39, 35), PackedInt32Array(35, 39, 38), PackedInt32Array(27, 42, 26), PackedInt32Array(26, 42, 41), PackedInt32Array(43, 41, 44), PackedInt32Array(44, 41, 45), PackedInt32Array(42, 46, 45), PackedInt32Array(41, 42, 45), PackedInt32Array(36, 37, 47), PackedInt32Array(47, 37, 48), PackedInt32Array(31, 47, 30), PackedInt32Array(30, 47, 48)]

[sub_resource type="BoxShape3D" id="BoxShape3D_lo3jn"]
size = Vector3(1, 1, 1.2922363)

[sub_resource type="Gradient" id="Gradient_4mrxx"]
offsets = PackedFloat32Array(0, 0.5837838, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 0.16470589, 0.1764706, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7r4gi"]
gradient = SubResource("Gradient_4mrxx")

[node name="world2" type="Node3D"]
script = ExtResource("1_q5uyg")
game_over_scene = SubResource("PackedScene_4mrxx")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tefeu")

[node name="player" parent="." instance=ExtResource("3_hvnw1")]
transform = Transform3D(0.70710677, 0, 0.70710677, 0, 1, 0, -0.70710677, 0, 0.70710677, 14.978533, 0.52314055, 4.420458)

[node name="camera_rig" parent="." instance=ExtResource("4_lo3jn")]

[node name="enemies" type="Node3D" parent="."]

[node name="spider" parent="enemies" instance=ExtResource("5_04th8")]
transform = Transform3D(1.3113416e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113416e-07, -7.8674355, 0.50171745, 4.884794)

[node name="spider2" parent="enemies" instance=ExtResource("5_04th8")]
transform = Transform3D(1.3113416e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113416e-07, -7.8674355, 0.50171745, 6.884794)

[node name="spider3" parent="enemies" instance=ExtResource("5_04th8")]
transform = Transform3D(1.3113416e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113416e-07, -0.86743546, 0.50171745, -7.115206)

[node name="spider5" parent="enemies" instance=ExtResource("5_04th8")]
transform = Transform3D(1.3113416e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113416e-07, 7.1325645, 0.50171745, -7.115206)

[node name="spider4" parent="enemies" instance=ExtResource("5_04th8")]
transform = Transform3D(1.3113416e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113416e-07, -7.8674355, 0.50171745, -8.115206)

[node name="spider6" parent="enemies" instance=ExtResource("5_04th8")]
transform = Transform3D(1.3113416e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113416e-07, 3.1325645, 0.50171745, -8.115206)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_tefeu")

[node name="map" type="Node3D" parent="NavigationRegion3D"]

[node name="floor" type="CSGBox3D" parent="NavigationRegion3D/map"]
material_override = ExtResource("6_hvnw1")
use_collision = true
size = Vector3(40, 1, 20)

[node name="lights" type="Node3D" parent="NavigationRegion3D/map"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="NavigationRegion3D/map/lights"]
transform = Transform3D(-1, 8.742278e-08, 3.821371e-15, 0, -4.371139e-08, 1, 8.742278e-08, 1, 4.371139e-08, -0.041733265, 0.025813103, -0.019107819)
light_energy = 0.8
shadow_enabled = true

[node name="inner_walls" type="Node3D" parent="NavigationRegion3D/map"]

[node name="wall5" type="CSGBox3D" parent="NavigationRegion3D/map/inner_walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.28171262, 10.485639, 2, -1.5209763)
layers = 2
material_override = ExtResource("7_lo3jn")
use_collision = true
size = Vector3(1, 3, 53)
script = ExtResource("8_086et")

[node name="wall6" type="CSGBox3D" parent="NavigationRegion3D/map/inner_walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.28171262, 1.4856386, 2, 5.619093)
layers = 2
material_override = ExtResource("7_lo3jn")
use_collision = true
size = Vector3(1, 3, 30.40332)
script = ExtResource("8_086et")

[node name="wall7" type="CSGBox3D" parent="NavigationRegion3D/map/inner_walls"]
transform = Transform3D(-4.371139e-08, 0, -0.28171262, 0, 1, 0, 1, 0, -1.231405e-08, -0.60889935, 2, 1.8351098)
layers = 2
material_override = ExtResource("7_lo3jn")
use_collision = true
size = Vector3(1, 3, 14.009277)
script = ExtResource("8_086et")

[node name="wall8" type="CSGBox3D" parent="NavigationRegion3D/map/inner_walls"]
transform = Transform3D(-4.371139e-08, 0, -0.28171262, 0, 1, 0, 1, 0, -1.231405e-08, -11.585335, 2, 1.8351096)
layers = 2
material_override = ExtResource("7_lo3jn")
use_collision = true
size = Vector3(1, 3, 50)
script = ExtResource("8_086et")

[node name="wall9" type="CSGBox3D" parent="NavigationRegion3D/map/inner_walls"]
transform = Transform3D(-1, 0, 2.46281e-08, 0, 1, 0, -8.742278e-08, 0, -0.28171262, -5.044328, 2, -5.2000613)
layers = 2
material_override = ExtResource("7_lo3jn")
use_collision = true
size = Vector3(1, 3, 27)
script = ExtResource("8_086et")

[node name="wall10" type="CSGBox3D" parent="NavigationRegion3D/map/inner_walls"]
transform = Transform3D(1, 0, 0, 0, 0.039999984, 0, 0, 0, 0.28171262, 10.485639, 3.5576878, -1.5209763)
layers = 2
material_override = ExtResource("7_hixyl")
use_collision = true
size = Vector3(1, 3, 53)
script = ExtResource("8_086et")

[node name="wall11" type="CSGBox3D" parent="NavigationRegion3D/map/inner_walls"]
transform = Transform3D(1, 0, 0, 0, 0.039999984, 0, 0, 0, 0.28171262, 1.4856387, 3.5576878, 5.619093)
layers = 2
material_override = ExtResource("7_hixyl")
use_collision = true
size = Vector3(1, 3, 30.40332)
script = ExtResource("8_086et")

[node name="wall12" type="CSGBox3D" parent="NavigationRegion3D/map/inner_walls"]
transform = Transform3D(-4.371139e-08, 0, -0.28171262, 0, 0.039999984, 0, 1, 0, -1.231405e-08, -0.60889935, 3.5576878, 1.8351098)
layers = 2
material_override = ExtResource("7_hixyl")
use_collision = true
size = Vector3(1, 3, 14.009277)
script = ExtResource("8_086et")

[node name="wall13" type="CSGBox3D" parent="NavigationRegion3D/map/inner_walls"]
transform = Transform3D(-4.371139e-08, 0, -0.28171262, 0, 0.039999984, 0, 1, 0, -1.231405e-08, -11.585335, 3.5576878, 1.8351096)
layers = 2
material_override = ExtResource("7_hixyl")
use_collision = true
size = Vector3(1, 3, 50)
script = ExtResource("8_086et")

[node name="wall14" type="CSGBox3D" parent="NavigationRegion3D/map/inner_walls"]
transform = Transform3D(-1, 0, 2.46281e-08, 0, 0.039999984, 0, -8.742278e-08, 0, -0.28171262, -5.0443287, 3.5576878, -5.2000613)
layers = 2
material_override = ExtResource("7_hixyl")
use_collision = true
size = Vector3(1, 3, 27)
script = ExtResource("8_086et")

[node name="outer_walls" type="Node3D" parent="NavigationRegion3D/map"]

[node name="wall" type="CSGBox3D" parent="NavigationRegion3D/map/outer_walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.485638, 2, 0)
layers = 2
material_override = ExtResource("7_lo3jn")
use_collision = true
size = Vector3(1, 3, 18)

[node name="wall2" type="CSGBox3D" parent="NavigationRegion3D/map/outer_walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1.8, -19.500776, 2, 0)
material_override = ExtResource("7_lo3jn")
use_collision = true
size = Vector3(1, 3, 10)

[node name="wall3" type="CSGBox3D" parent="NavigationRegion3D/map/outer_walls"]
transform = Transform3D(-4.3711385e-08, 0, 2.5, 0, 1, 0, -0.99999994, 0, -1.09278474e-07, 0.014556211, 2, -9.493208)
material_override = ExtResource("7_lo3jn")
use_collision = true
size = Vector3(1, 3, 15.959106)

[node name="wall4" type="CSGBox3D" parent="NavigationRegion3D/map/outer_walls"]
transform = Transform3D(-4.3711385e-08, 0, 2.5, 0, 1, 0, -0.99999994, 0, -1.09278474e-07, -0.0075686397, 2, 9.493208)
layers = 2
material_override = ExtResource("7_lo3jn")
use_collision = true
size = Vector3(1, 3, 15.9626465)

[node name="wall5" type="CSGBox3D" parent="NavigationRegion3D/map/outer_walls"]
transform = Transform3D(1, 0, 0, 0, 0.039999984, 0, 0, 0, 1, 19.485638, 3.5576878, 0)
layers = 2
material_override = ExtResource("7_hixyl")
use_collision = true
size = Vector3(1, 3, 18)

[node name="wall6" type="CSGBox3D" parent="NavigationRegion3D/map/outer_walls"]
transform = Transform3D(1, 0, 0, 0, 0.039999984, 0, 0, 0, 1.8, -19.500776, 3.5576878, 0)
material_override = ExtResource("7_hixyl")
use_collision = true
size = Vector3(1, 3, 10)

[node name="wall7" type="CSGBox3D" parent="NavigationRegion3D/map/outer_walls"]
transform = Transform3D(-4.3711385e-08, 0, 2.5, 0, 0.039999984, 0, -0.99999994, 0, -1.09278474e-07, 0.014556229, 3.5576878, -9.493208)
material_override = ExtResource("7_hixyl")
use_collision = true
size = Vector3(1, 3, 15.959106)

[node name="wall8" type="CSGBox3D" parent="NavigationRegion3D/map/outer_walls"]
transform = Transform3D(-4.3711385e-08, 0, 2.5, 0, 0.039999984, 0, -0.99999994, 0, -1.09278474e-07, -0.0075686574, 3.5576878, 9.493208)
layers = 2
material_override = ExtResource("7_hixyl")
use_collision = true
size = Vector3(1, 3, 15.9626465)

[node name="porta2" parent="NavigationRegion3D/map" instance=ExtResource("10_hvnw1")]
transform = Transform3D(-0.0008553192, 0, -0.99999964, 0, 1, 0, 0.99999964, 0, -0.0008553192, -19.24473, 2, 6.3286324)

[node name="Area3D" type="Area3D" parent="NavigationRegion3D/map/porta2"]
transform = Transform3D(-0.0008553192, 0, 0.99999964, 0, 1, 0, -0.99999964, 0, -0.0008553192, 0.008004665, 0.09174299, 0.26745224)

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/map/porta2/Area3D"]
transform = Transform3D(3, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
shape = SubResource("BoxShape3D_lo3jn")

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
script = ExtResource("9_i86qd")

[node name="LivesLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -145.0
offset_top = 14.0
offset_right = -16.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Lives: 3"

[node name="GameOver" type="Control" parent="UI"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_r0a0i")

[node name="TextureRect" type="TextureRect" parent="UI/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_7r4gi")

[node name="Control" type="Control" parent="UI/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/GameOver/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.5
offset_top = -140.0
offset_right = 141.5
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 52
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOver/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.0
offset_top = -44.0
offset_right = 83.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2

[node name="RestartGameButton" type="Button" parent="UI/GameOver/Control/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Restart Game"

[node name="HSeparator" type="HSeparator" parent="UI/GameOver/Control/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="UI/GameOver/Control/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "Main Menu"
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="NavigationRegion3D/map/porta2/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="pressed" from="UI/GameOver/Control/VBoxContainer/RestartGameButton" to="UI/GameOver" method="_on_restart_game_button_pressed"]
[connection signal="pressed" from="UI/GameOver/Control/VBoxContainer/MainMenuButton" to="UI/GameOver" method="_on_main_menu_button_pressed"]
